fix: add places button spacing

--- a/src/base/static/scss/_map.scss
+++ b/src/base/static/scss/_map.scss
@@ -30,10 +30,6 @@
   padding: 0.5em 0.5em 0.75em;
 }
 
-#add-place-btn-container {
-  padding: 5px;
-}
-
 #story-btn-container {
   padding: 5px;
 }
